Fix styling on character selection screen
Reduced the size of the character lists so that they don't get cut off

--- a/src/containers/CharacterEditView/CharacterEditView.css
+++ b/src/containers/CharacterEditView/CharacterEditView.css
@@ -15,13 +15,13 @@
 .character-edit .locked-characters {
   display: inline-block;
   vertical-align: top;
-  height: calc(100% - 5em);
+  height: calc(100% - 6em);
   margin: 0 5em;
   max-width: calc(33% - 10em);
 }
 
 .character-edit .character-list {
-  max-height: calc(100% - 3em);
+  max-height: calc(100% - 4em);
   overflow-y: auto;
   overflow-x: hidden;
 }
